--- a/src/css/call.css
+++ b/src/css/call.css
@@ -1,25 +1,4 @@
 :root {
-  /* common */
-  --msger-top: 50%;
-  --msger-left: 50%;
-  --msger-height: 400px;
-  --msger-width: 400px;
-  --more-select-w: 100%;
-  --btns-hover-scale: scale(1.1);
-
-  --body-bg: #16171b;
-  --msger-bg: #16171b;
-  --msger-private-bg: black;
-  --left-msg-bg: #222328;
-  --private-msg-bg: #f77070;
-  --right-msg-bg: #0a0b0c;
-  --box-shadow: 3px 3px 6px #0a0b0c, -3px -3px 6px #222328; 
-  --btn-bg: rgba(48, 48, 48);
-  --btn-color: white;
-  --btn-opc: 1;
-  --btns-bottom: 20px;
-  --more-label-color: #9477CB;
-  
   --video-object-fit: cover;
 }
 
@@ -40,7 +19,7 @@
 
 body {
   font-family: sans-serif;
-  background: var(--body-bg); 
+  background: #16171b; 
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
@@ -88,18 +67,17 @@ body {
   padding: 10px;
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 5px;
-  font-size: small; /* 4 mobile */
+  font-size: small; 
   font-weight: bold;
   text-align: center;
   width: 100%;
   cursor: default;
-  /* center */
   top: 22px;
   left: 50%;
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
-  /* fadeIn effect */
+  
   -webkit-animation: fadeIn ease-in 1;
   -moz-animation: fadeIn ease-in 1;
   animation: fadeIn ease-in 1;
@@ -155,13 +133,12 @@ body {
   z-index: 12;
   display: none;
   position: absolute;
-  bottom: var(--btns-bottom);
+  bottom: 20px;
   left: 35%;
   -webkit-transform: translate(0%, -50%);
   -ms-transform: translate(0%, -50%);
   transform: translate(0%, -50%);
   background: rgba(48, 48, 48);
-  box-shadow: var(--box-shadow);
   padding: 15px;
   flex-direction: row;
   justify-content: space-around;
@@ -183,10 +160,10 @@ body {
   border: none;
   font-size: 1.5rem;
   transition: all 0.3s ease-in-out;
-  background: var(--btn-bg);
+  background: rgba(48, 48, 48);
   padding: 4px;
   border-radius: 5px;
-  opacity: var(--btn-opc);
+  opacity: 1;
 }
 
 #bottomButtons button:focus {
@@ -212,7 +189,7 @@ body {
 #myHandBtn,
 #moreBtn,
 #leaveRoomBtn {
-  color: var(--btn-color);
+  color: white;
 }
 
 #startAudioBtn:hover,
@@ -224,11 +201,11 @@ body {
 #myHandBtn:hover,
 #moreBtn:hover {
   color: #9477CB;
-  transform: var(--btns-hover-scale);
+  transform: scale(1.1);
 }
 #leaveRoomBtn:hover {
   color: red;
-  transform: var(--btns-hover-scale);
+  transform: scale(1.1);
 }
 
 .fa-microphone-slash,
@@ -247,9 +224,7 @@ body {
   background-color: rgba(48, 48, 48);
   border-radius: 5px;
   margin: auto;
-  box-shadow: var(--box-shadow);
   padding: 10px;
-  
   overflow: hidden;
 }
 
@@ -273,7 +248,7 @@ body {
 
 #usersCloseBtn:hover {
   color: #9477CB;
-  transform: var(--btns-hover-scale);
+  transform: scale(1.1);
   transition: all 0.3s ease-in-out;
 }
 
@@ -285,29 +260,25 @@ body {
   z-index: 10;
   display: none;
   position: absolute;
-  /* center screen */
-  top: var(--msger-top);
-  left: var(--msger-left);
+  top: 50%;
+  left: 50%;
   transform: translate(90%, -3%);
-  /* end center screen  */
-  height: var(--msger-height);
-  width: var(--msger-width);
-  background: var(--msger-bg);
-  /* text-align: justify; */
+  height: 400px;
+  width: 400px;
+  background: #16171b;
   overflow: hidden;
   border-radius: 5px;
-  box-shadow: var(--box-shadow);
 }
 
 .msger {
   display: flex;
   flex-flow: column wrap;
   justify-content: space-between;
-  top: var(--msger-top);
-  left: var(--msger-left);
-  height: var(--msger-height);
-  width: var(--msger-width);
-  background: var(--msger-bg);
+  top: 50%;
+  left: 50%;
+  height: 400px;
+  width: 400px;
+  background: #16171b;
 }
 
 /*--------------------------------------------------------------
@@ -323,7 +294,7 @@ body {
   cursor: move;
 }
 
-.msger-private-header {
+.msger-individual-header {
   display: flex;
   justify-content: space-between;
   padding: 10px;
@@ -342,7 +313,7 @@ body {
 }
 .msger-header-options button:hover {
   color: #9477CB;
-  transform: var(--btns-hover-scale);
+  transform: scale(1.1);
   transition: all 0.3s ease-in-out;
 }
 
@@ -354,7 +325,7 @@ body {
   flex: 1;
   overflow-y: auto;
   padding: 10px;
-  background: var(--msger-bg);
+  background: #16171b;
 }
 .msger-chat::-webkit-scrollbar {
   width: 5px;
@@ -379,13 +350,13 @@ body {
 /* left side */
 
 .left-msg .msg-bubble {
-  background: var(--left-msg-bg);
+  background: #222328;
   border-bottom-left-radius: 0;
   color: #fff;
 }
 
-.left-msg .private-msg-bubble {
-  background: var(--private-msg-bg);
+.left-msg .individual-msg-bubble {
+  background: #9477CB;
   border-bottom-left-radius: 0;
   color: #fff;
 }
@@ -396,12 +367,12 @@ body {
   flex-direction: row-reverse;
 }
 .right-msg .msg-bubble {
-  background: var(--right-msg-bg);
+  background: #0a0b0c;
   border-bottom-right-radius: 0;
   color: #fff;
 }
-.right-msg .private-msg-bubble {
-  background: var(--private-msg-bg);
+.right-msg .individual-msg-bubble {
+  background: #9477CB;
   border-bottom-right-radius: 0;
   color: #fff;
 }
@@ -418,10 +389,12 @@ body {
   background-size: cover;
 }
 
-.private-msg-bubble,
+.individual-msg-bubble,
 .msg-bubble {
   max-width: 200px;
-  padding: 15px;
+  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
   border-radius: 15px;
 }
 
@@ -438,7 +411,8 @@ body {
 }
 
 .msg-info-time {
-  font-size: 0.85em;
+  padding-top: 20px;
+  font-size: 0.65em;
 }
 
 .msg-text {
@@ -458,7 +432,7 @@ body {
 .msger-inputarea {
   display: flex;
   padding: 10px;
-  background: var(--msger-bg);
+  background: #16171b;
 }
 
 .msger-inputarea * {
@@ -482,7 +456,7 @@ body {
 
 #msgerSendBtn:hover {
   color: #9477CB;
-  transform: var(--btns-hover-scale);
+  transform: scale(1.1);
   transition: all 0.3s ease-in-out;
 }
 
@@ -490,16 +464,15 @@ body {
 # Chat Connected Peers 
 --------------------------------------------------------------*/
 
-#msgerCP {
+#msgerI {
   z-index: 11;
   display: none;
   cursor: default;
-  top: var(--msger-top);
-  left: var(--msger-left);
-  height: var(--msger-height);
-  width: var(--msger-width);
-  background: var(--msger-private-bg);
-  /* center */
+  top: 50%;
+  left: 50%;
+  height: 400px;
+  width: 400px;
+  background: black;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -507,7 +480,7 @@ body {
   overflow: hidden;
 }
 
-#msgerCPList button {
+#msgerIList button {
   border: none;
   font-size: 1.2rem;
   transition: all 0.3s ease-in-out;
@@ -517,9 +490,9 @@ body {
   transition: background 0.23s;
 }
 
-#msgerCPList button:hover {
+#msgerIList button:hover {
   color: #9477CB;
-  transform: var(--btns-hover-scale);
+  transform: scale(1.1);
   transition: all 0.3s ease-in-out;
 }
 
@@ -527,7 +500,7 @@ body {
   flex: 1;
   overflow-y: auto;
   padding: 3px;
-  background: var(--msger-bg);
+  background: #16171b;
 }
 .participants-box::-webkit-scrollbar {
   width: 5px;
@@ -572,6 +545,7 @@ video {
 video:fullscreen {
   object-fit: contain;
 }
+
 .video {
   float: left;
   width: 25vw;
@@ -665,7 +639,7 @@ video:fullscreen {
 #muteEveryoneBtn:hover,
 #hideEveryoneBtn:hover {
   color: #9477CB;
-  transform: var(--btns-hover-scale);
+  transform: scale(1.1);
 }
 
 #more {
@@ -679,7 +653,6 @@ video:fullscreen {
   background-color: rgba(48, 48, 48);
   border-radius: 5px;
   margin: auto;
-  box-shadow: var(--box-shadow);
   padding: 10px;
   
   overflow: hidden;
@@ -695,7 +668,7 @@ video:fullscreen {
 
 #moreCloseBtn:hover {
   color: #9477CB;
-  transform: var(--btns-hover-scale);
+  transform: scale(1.1);
   transition: all 0.3s ease-in-out;
 }
 
