added room name

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,28 +7,8 @@ body, html {
   line-height: 1.8;
 }
 
-.bgimg-1 {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.bgimg-1 {
-  background-image: url('https://www.howtogeek.com/thumbcache/2/200/23778f53defb0f849f8b821392b26642/wp-content/uploads/2020/05/stock-lede-microsoft-teams.jpg');
-  min-height: 100%;
-}
-
 .w3-wide {letter-spacing: 10px;}
 .w3-hover-opacity {cursor: pointer;}
-
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1600px) {
-  .bgimg-1 {
-    background-attachment: scroll;
-    min-height: 60.5%;
-  }
-}
 
 .navbar {
   margin-bottom: 0;
@@ -388,15 +368,30 @@ textarea {
     padding-top: 10px;
     margin-bottom: 5px;
 }
-.social-links li a {
-    background: #EFF0F4;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    display: inline-block;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    color: #7A7676;
+
+/*--------------------------------------------------------------
+# Swal2
+--------------------------------------------------------------*/
+
+.swal2-validation-message,
+.swal2-title,
+.swal2-content,
+.swal2-input {
+  text-align: center;
+  color: white !important;
+  background-color: transparent !important;
+}
+.swal2-file {
+  color: white !important;
+  background-color: transparent !important;
+}
+.swal2-html-container {
+  color: rgb(165, 165, 165) !important;
+  background-color: transparent !important;
+}
+.swal2-select {
+  background-color: black !important;
+  color: white !important;
+  border-radius: 6px !important;
 }
 
