--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -354,6 +354,7 @@ body {
 }
 
 #shareRoomBtn,
+#joinCallBtn,
 #leaveRoomBtn {
   border: none;
   border-radius: 5px;
@@ -365,7 +366,8 @@ body {
   transition: all 0.3s ease-in-out;
 }
 
-#shareRoomBtn:hover {
+#shareRoomBtn:hover,
+#joinCallBtn:hover {
   color: #9477CB;
   transform: scale(1.1);
 }
