--- a/src/css/call.css
+++ b/src/css/call.css
@@ -19,16 +19,16 @@
 
 body {
   font-family: sans-serif;
-  background: #16171b; 
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
   margin: 0;
   padding: 0;
   justify-content: center;
   align-items: center;
   height: 100vh;
   opacity: 0; 
+  background: #16171b; 
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
   -webkit-animation: fadeIn ease-in 1;
   -moz-animation: fadeIn ease-in 1;
   animation: fadeIn ease-in 1;
@@ -41,10 +41,6 @@ body {
   overflow: hidden;
 }
 
-/*--------------------------------------------------------------
-# Loading...
---------------------------------------------------------------*/
-
 #loadingDiv {
   position: relative;
   color: white;
@@ -52,21 +48,13 @@ body {
   left: 60%;
   transform: translate(-18%, -25%);
 }
-#loadingDiv h1 {
-  font-size: 70px;
-}
 
-/*--------------------------------------------------------------
-# Status menù (time-name-audio-video)
---------------------------------------------------------------*/
-
-.statusMenu {
+.header {
   z-index: 7;
   display: none;
   position: absolute;
-  padding: 10px;
+  padding: 15px;
   background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 5px;
   font-size: small; 
   font-weight: bold;
   text-align: center;
@@ -77,7 +65,6 @@ body {
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
-  
   -webkit-animation: fadeIn ease-in 1;
   -moz-animation: fadeIn ease-in 1;
   animation: fadeIn ease-in 1;
@@ -89,15 +76,15 @@ body {
   animation-duration: 1s;
   overflow: hidden;
 }
-.statusMenu i,
-.statusMenu p,
-.statusMenu h4 {
+.header i,
+.header p,
+.header h4 {
   color: white;
   display: inline;
   border: none;
   margin-right: 10px;
 }
-.statusMenu button {
+.header button {
   float: right;
   margin-right: 3px;
   color: white;
@@ -105,16 +92,12 @@ body {
   display: inline;
   border: none;
 }
-.statusMenu p:hover,
-.statusMenu h4:hover,
-.statusMenu button:hover {
+.header p:hover,
+.header h4:hover,
+.header button:hover {
   color: #9477CB;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
-
-/*--------------------------------------------------------------
-# Image on video OFF
---------------------------------------------------------------*/
 
 .videoImg {
   z-index: 8;
@@ -125,9 +108,6 @@ body {
   display: none;
 }
 
-/*--------------------------------------------------------------
-# Bottom buttons
---------------------------------------------------------------*/
 
 #bottomButtons {
   z-index: 12;
@@ -159,10 +139,9 @@ body {
 #bottomButtons button {
   border: none;
   font-size: 1.5rem;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
   background: rgba(48, 48, 48);
-  padding: 4px;
-  border-radius: 5px;
+  padding: 5px;
   opacity: 1;
 }
 
@@ -172,14 +151,12 @@ body {
 
 #startAudioBtn,
 #startVideoBtn {
-  border: none;
-  border-radius: 5px;
-  width: 40px;
+  border: none;  width: 40px;
   background: rgba(48, 48, 48);
   color: white;
   font-size: 1.5rem;
-  padding: 4px;
-  transition: all 0.3s ease-in-out;
+  padding: 5px;
+  transition: all 0.2s ease-in-out;
 }
 
 #usersBtn,
@@ -222,9 +199,8 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(48, 48, 48);
-  border-radius: 5px;
   margin: auto;
-  padding: 10px;
+  padding: 15px;
   overflow: hidden;
 }
 
@@ -243,18 +219,14 @@ body {
   font-size: 1.2rem;
   background: transparent;
   color: #fff;
-  transition: background 0.23s;
+  transition: background 0.2s;
 }
 
 #usersCloseBtn:hover {
   color: #9477CB;
   transform: scale(1.1);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
-
-/*--------------------------------------------------------------
-# Chat room aka msger
---------------------------------------------------------------*/
 
 .msger-draggable {
   z-index: 10;
@@ -267,7 +239,6 @@ body {
   width: 400px;
   background: #16171b;
   overflow: hidden;
-  border-radius: 5px;
 }
 
 .msger {
@@ -281,23 +252,18 @@ body {
   background: #16171b;
 }
 
-/*--------------------------------------------------------------
-# Chat room header
---------------------------------------------------------------*/
-
 .msger-header {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 15px;
   background: rgb(0, 0, 0);
   color: #666;
-  cursor: move;
 }
 
 .msger-individual-header {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 15px;
   background: rgb(0, 0, 0);
   color: #666;
 }
@@ -305,26 +271,21 @@ body {
 .msger-header-options button {
   border: none;
   font-size: 1.2rem;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
   background: rgb(0, 0, 0);
   color: #fff;
-  border-radius: 5px;
-  transition: background 0.23s;
+  transition: background 0.2s;
 }
 .msger-header-options button:hover {
   color: #9477CB;
   transform: scale(1.1);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
-
-/*--------------------------------------------------------------
-# Chat room output area
---------------------------------------------------------------*/
 
 .msger-chat {
   flex: 1;
   overflow-y: auto;
-  padding: 10px;
+  padding: 15px;
   background: #16171b;
 }
 .msger-chat::-webkit-scrollbar {
@@ -347,8 +308,6 @@ body {
   margin: 0;
 }
 
-/* left side */
-
 .left-msg .msg-bubble {
   background: #222328;
   border-bottom-left-radius: 0;
@@ -360,8 +319,6 @@ body {
   border-bottom-left-radius: 0;
   color: #fff;
 }
-
-/* right side */
 
 .right-msg {
   flex-direction: row-reverse;
@@ -425,20 +382,15 @@ body {
   color: white;
 }
 
-/*--------------------------------------------------------------
-# Chat room input area
---------------------------------------------------------------*/
-
 .msger-inputarea {
   display: flex;
-  padding: 10px;
+  padding: 15px;
   background: #16171b;
 }
 
 .msger-inputarea * {
-  padding: 10px;
+  padding: 15px;
   border: none;
-  border-radius: 3px;
   font-size: 1em;
   color: white;
 }
@@ -451,18 +403,14 @@ body {
 #msgerSendBtn {
   background: rgb(0, 0, 0);
   color: #fff;
-  transition: background 0.23s;
+  transition: background 0.2s;
 }
 
 #msgerSendBtn:hover {
   color: #9477CB;
   transform: scale(1.1);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
-
-/*--------------------------------------------------------------
-# Chat Connected Peers 
---------------------------------------------------------------*/
 
 #msgerI {
   z-index: 11;
@@ -483,17 +431,16 @@ body {
 #msgerIList button {
   border: none;
   font-size: 1.2rem;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
   background: rgb(0, 0, 0);
   color: #fff;
-  border-radius: 5px;
-  transition: background 0.23s;
+  transition: background 0.2s;
 }
 
 #msgerIList button:hover {
   color: #9477CB;
   transform: scale(1.1);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .participants-box {
@@ -524,7 +471,6 @@ body {
 
 .participants-area * {
   border: none;
-  border-radius: 1px;
   margin-left: 20px;
   font-size: 1em;
   color: white;
@@ -540,7 +486,7 @@ video {
   width: 100%;
   height: 100%;
   object-fit: var(--video-object-fit);
-  border: 5px solid transparent;
+  border: 3px solid transparent;
 }
 video:fullscreen {
   object-fit: contain;
@@ -582,10 +528,6 @@ video:fullscreen {
   --video-object-fit: cover;
 }
 
-/*--------------------------------------------------------------
-# Handle video elements on screen resize
---------------------------------------------------------------*/
-
 @media only screen and (max-width: 720px) {
   /* 960px */
   .video {
@@ -623,13 +565,12 @@ video:fullscreen {
 #muteEveryoneBtn,
 #hideEveryoneBtn {
   border: none;
-  border-radius: 5px;
   width: 40px;
   background: rgba(48, 48, 48);
   color: white;
   font-size: 1.5rem;
-  padding: 4px;
-  transition: all 0.3s ease-in-out;
+  padding: 5px;
+  transition: all 0.2s ease-in-out;
 }
 
 #shareRoomBtn:hover,
@@ -651,10 +592,8 @@ video:fullscreen {
   left: 50%;
   transform: translate(10%, 200%);
   background-color: rgba(48, 48, 48);
-  border-radius: 5px;
   margin: auto;
-  padding: 10px;
-  
+  padding: 15px;
   overflow: hidden;
 }
 
@@ -663,38 +602,19 @@ video:fullscreen {
   font-size: 1.2rem;
   background: transparent;
   color: #fff;
-  transition: background 0.23s;
+  transition: background 0.2s;
 }
 
 #moreCloseBtn:hover {
   color: #9477CB;
   transform: scale(1.1);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
-/*--------------------------------------------------------------
-# Swal2
---------------------------------------------------------------*/
-
-.swal2-validation-message,
 .swal2-title,
-.swal2-content,
-.swal2-input {
+.swal2-html-container,
+.swal2-text {
   text-align: center;
   color: white !important;
   background-color: transparent !important;
 }
-.swal2-file {
-  color: white !important;
-  background-color: transparent !important;
-}
-.swal2-html-container {
-  color: rgb(165, 165, 165) !important;
-  background-color: transparent !important;
-}
-.swal2-select {
-  background-color: black !important;
-  color: white !important;
-  border-radius: 6px !important;
-}
-
