--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -19,16 +19,16 @@
 
 body {
   font-family: sans-serif;
-  background: #16171b; 
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
   margin: 0;
   padding: 0;
   justify-content: center;
   align-items: center;
   height: 100vh;
   opacity: 0; 
+  background: #16171b; 
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
   -webkit-animation: fadeIn ease-in 1;
   -moz-animation: fadeIn ease-in 1;
   animation: fadeIn ease-in 1;
@@ -41,19 +41,12 @@ body {
   overflow: hidden;
 }
 
-/*--------------------------------------------------------------
-# Loading...
---------------------------------------------------------------*/
-
 #loadingDiv {
   position: relative;
   color: white;
   top: 40%;
   left: 60%;
   transform: translate(-18%, -25%);
-}
-#loadingDiv h1 {
-  font-size: 70px;
 }
 
 #users {
@@ -64,9 +57,8 @@ body {
   top: 0%;
   right: 0%;
   background-color: rgba(48, 48, 48);
-  border-radius: 5px;
   margin: auto;
-  padding: 10px;
+  padding: 15px;
   overflow: hidden;
 }
 
@@ -80,10 +72,6 @@ body {
   color: white;
 }
 
-/*--------------------------------------------------------------
-# Chat room aka msger
---------------------------------------------------------------*/
-
 .msger-draggable {
   z-index: 10;
   display: block;
@@ -94,7 +82,6 @@ body {
   width: 73%;
   background: #16171b;
   overflow: hidden;
-  border-radius: 5px;
 }
 
 .msger {
@@ -108,14 +95,10 @@ body {
   background: #16171b;
 }
 
-/*--------------------------------------------------------------
-# Chat room header
---------------------------------------------------------------*/
-
 .msger-header {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 15px;
   background: rgb(0, 0, 0);
   color: #666;
 }
@@ -123,7 +106,7 @@ body {
 .msger-individual-header {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 15px;
   background: rgb(0, 0, 0);
   color: #666;
 }
@@ -131,26 +114,21 @@ body {
 .msger-header-options button {
   border: none;
   font-size: 1.2rem;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
   background: rgb(0, 0, 0);
   color: #fff;
-  border-radius: 5px;
-  transition: background 0.23s;
+  transition: background 0.2s;
 }
 .msger-header-options button:hover {
   color: #9477CB;
   transform: scale(1.1);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
-
-/*--------------------------------------------------------------
-# Chat room output area
---------------------------------------------------------------*/
 
 .msger-chat {
   flex: 1;
   overflow-y: auto;
-  padding: 10px;
+  padding: 15px;
   background: #16171b;
 }
 .msger-chat::-webkit-scrollbar {
@@ -173,8 +151,6 @@ body {
   margin: 0;
 }
 
-/* left side */
-
 .left-msg .msg-bubble {
   background: #222328;
   border-bottom-left-radius: 0;
@@ -186,8 +162,6 @@ body {
   border-bottom-left-radius: 0;
   color: #fff;
 }
-
-/* right side */
 
 .right-msg {
   flex-direction: row-reverse;
@@ -251,20 +225,15 @@ body {
   color: white;
 }
 
-/*--------------------------------------------------------------
-# Chat room input area
---------------------------------------------------------------*/
-
 .msger-inputarea {
   display: flex;
-  padding: 10px;
+  padding: 15px;
   background: #16171b;
 }
 
 .msger-inputarea * {
-  padding: 10px;
+  padding: 15px;
   border: none;
-  border-radius: 3px;
   font-size: 1em;
   color: white;
 }
@@ -277,18 +246,14 @@ body {
 #msgerSendBtn {
   background: rgb(0, 0, 0);
   color: #fff;
-  transition: background 0.23s;
+  transition: background 0.2s;
 }
 
 #msgerSendBtn:hover {
   color: #9477CB;
   transform: scale(1.1);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
-
-/*--------------------------------------------------------------
-# Chat Connected Peers 
---------------------------------------------------------------*/
 
 #msgerI {
   z-index: 11;
@@ -306,17 +271,16 @@ body {
 #msgerIList button {
   border: none;
   font-size: 1.2rem;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
   background: rgb(0, 0, 0);
   color: #fff;
-  border-radius: 5px;
-  transition: background 0.23s;
+  transition: background 0.2s;
 }
 
 #msgerIList button:hover {
   color: #9477CB;
   transform: scale(1.1);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .participants-box {
@@ -347,7 +311,6 @@ body {
 
 .participants-area * {
   border: none;
-  border-radius: 1px;
   margin-left: 20px;
   font-size: 1em;
   color: white;
@@ -357,13 +320,12 @@ body {
 #joinCallBtn,
 #leaveRoomBtn {
   border: none;
-  border-radius: 5px;
   width: 40px;
   background: rgba(48, 48, 48);
   color: white;
   font-size: 1.5rem;
-  padding: 4px;
-  transition: all 0.3s ease-in-out;
+  padding: 5px;
+  transition: all 0.2s ease-in-out;
 }
 
 #shareRoomBtn:hover,
@@ -377,29 +339,10 @@ body {
   transform: scale(1.1);
 }
 
-/*--------------------------------------------------------------
-# Swal2
---------------------------------------------------------------*/
-
-.swal2-validation-message,
-.swal2-title,
-.swal2-content,
-.swal2-input {
+.swal2-title {
   text-align: center;
   color: white !important;
   background-color: transparent !important;
 }
-.swal2-file {
-  color: white !important;
-  background-color: transparent !important;
-}
-.swal2-html-container {
-  color: rgb(165, 165, 165) !important;
-  background-color: transparent !important;
-}
-.swal2-select {
-  background-color: black !important;
-  color: white !important;
-  border-radius: 6px !important;
-}
+
 
